# dj-registry

./: .flake8  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  package.yaml  publish-package.yaml
registry/: __init__.py  admin.py  apps.py  helper.py  models.py
registry/migrations/: 0001_initial.py  0002_auto_20200404_0726.py
