[tool.poetry]
name = "dj-registry"
version = "0.1.0"
description = "A simple, easy access key-value registry for Django."
authors = ["yychen <ctchen@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8"
Django = ">=3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
