[tool.poetry]
name = "dj_registry"
version = "0.2.1"
description = "A simple, easy access key-value registry for Django."
authors = ["Tom Chiung-ting Chen <ctchen@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
